--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -1,3 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+
+/*Typography
+--------------------------------------------------------------*/
+body,
+button,
+input,
+select,
+textarea {
+	color: #404040;
+	font-family: "Comfortaa", Arial, sans-serif;
+	font-size: 1.2rem;
+	line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Patua One", serif;
+  letter-spacing: 2px;
+}
+
+.container {
+    margin: 0 5rem;
+}
+
 .journalForm {
     display: flex;
     flex-direction: column;
